blocks/header.css
.header {
}

.header__title {
  font-size: 225px;
  line-height: 89.937%;
  letter-spacing: -11.25px;
  text-align: center;
  margin: 0;
  z-index: 0;
}

.header__box {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 566px;
  height: 120px;
  transform: rotate(-2.572deg);
  flex-shrink: 0;
  border-radius: 20px;
  border: 2px solid #fff;
  background: linear-gradient(
    194deg,
    rgba(238, 238, 238, 0.25) 0%,
    rgba(236, 236, 236, 0.09) 58.1%,
    rgba(226, 226, 226, 0) 100%
  );
  backdrop-filter: blur(15px);
  margin: -65px auto 0;
  z-index: 1;
}

.header__subtitle {
  font-size: 55px;
  line-height: 89.937%;
  letter-spacing: -2.75px;
}

@media screen and (max-width: 1290px) {
  .header__title {
    font-size: 150px;
    margin-bottom: 30px;
    letter-spacing: -7px;
  }

  .header__box {
    width: 350px;
    height: 75px;
    border: 1.5px solid #fff;
  }

  .header__subtitle {
    font-size: 35px;
  }
}

@media screen and (max-width: 865px) {
  .header__title {
    font-size: 90px;
    letter-spacing: -3px;
  }

  .header__box {
    width: 200px;
    height: 40px;
    border-radius: 10px;
    border: 1px solid #fff;
  }

  .header__subtitle {
    font-size: 20px;
    letter-spacing: -1px;
  }
}

@media screen and (max-width: 560px) {
  .header__title {
    font-size: 70px;
    margin-bottom: 40px;
  }

  .header__box {
    width: 150px;
    height: 30px;
    border-radius: 5px;
  }

  .header__subtitle {
    font-size: 16px;
  }
}

